# opentaxkr

./: .env  .gitignore  LICENSE-EXPLAIN.md  LICENSE-commercial.md  README.md  pyproject.toml  requirements.txt
opentaxkr/: __init__.py  cli.py  config.py  models.py
opentaxkr/ers/: __init__.py  address.py  docparser.py  formats.py  report.py  util.py  법정동코드_국세청홈페이지_18년6월7일.csv  전국세무서.csv
opentaxkr/ers/부가가치세/: docparser.py  records_20221201.py  schema_20221201.json
opentaxkr/ers/양도소득_개인지방소득세/: __init__.py  docparser.py  records_20230703.py  schema_20230703.json  개인지방소득세(양도소득)_파일레이아웃_v1.2.3_20230703.html  양도소득_개인지방소득세신고서식_2023-07-03.json
opentaxkr/ers/양도소득세/: __init__.py  docparser.py  records_20200224.py  records_20230502.py  schema_20200224.json  schema_20230502.json  양도소득세신고서식_2020-02-24.json  양도소득세신고서식_2023-05-02.json
tests/: test_address.py  test_ersreport.py  test_util.py  test_부가가치세.py  test_양도소득세.py
tests/samples/: 양도소득세_C116300.01  양도소득세_지방소득세_C116300.Y11
