[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "opentaxkr"
authors = [{name = "Pak Youngrok", email = "youngrok@finecode.kr"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "requests",
    "bs4",
    "python-dateutil",
    "addresskr",
    "icalendar",
    "typer",
    "openpyxl",
    "html5lib",
    "ipython",
    "dynaconf",
    "yapf",
    "pycountry",
    "opentaxkr-models @ git+https://github.com/finecodekr/opentaxkr-models.git",
]
[project.urls]
Home = "https://github.com/finecodekr/opentaxkr"
